--- a/package.json
+++ b/package.json
@@ -7,11 +7,14 @@
     "lint": "prettier --check \"src/**/*.{js,jsx,ts,tsx}\""
   },
   "dependencies": {
+    "@react-three/fiber": "^7.0.19",
     "react": "^17.0.2",
-    "react-dom": "^17.0.2"
+    "react-dom": "^17.0.2",
+    "three": "^0.134.0"
   },
   "devDependencies": {
     "@snowpack/plugin-dotenv": "^2.1.0",
+    "@snowpack/plugin-postcss": "^1.4.3",
     "@snowpack/plugin-react-refresh": "^2.5.0",
     "@snowpack/plugin-typescript": "^1.2.1",
     "@snowpack/web-test-runner-plugin": "^0.2.2",
@@ -21,10 +24,17 @@
     "@types/react": "^17.0.4",
     "@types/react-dom": "^17.0.3",
     "@types/snowpack-env": "^2.3.3",
+    "@types/three": "^0.134.0",
     "@web/test-runner": "^0.13.3",
+    "autoprefixer": "^10.4.0",
     "chai": "^4.3.4",
+    "daisyui": "^1.16.2",
+    "postcss": "^8.3.11",
+    "postcss-cli": "^9.0.2",
     "prettier": "^2.2.1",
     "snowpack": "^3.3.7",
+    "snowpack-plugin-glslify": "^1.0.0",
+    "tailwindcss": "^2.2.19",
     "typescript": "^4.2.4"
   }
 }
